@@ -57,6 +57,18 @@ public class SecondaryIndexManagerTest extends CQLTester
     }
 
     @Test
+    public void createSasiAfterSai()
+    {
+        createTable("CREATE TABLE %s (id int PRIMARY KEY, val text)");
+        createIndex("CREATE INDEX idx0 ON %s (val) USING 'sai'");
+        execute("INSERT INTO %s (id, val) VALUES (1, 'a')");
+        execute("SELECT * FROM %s WHERE val = 'a'");
+        flush();
+        createIndex("CREATE CUSTOM INDEX idx1 ON %s (val) USING 'org.apache.cassandra.index.sasi.SASIIndex'");
+        execute("SELECT * FROM %s WHERE val = 'a'");
+    }
+
+    @Test
     public void creatingIndexMarksTheIndexAsBuilt()
     {
         createTable("CREATE TABLE %s (a int, b int, c int, PRIMARY KEY (a, b))");
