@@ -1,4 +1,5 @@
 5.0-beta2
+ * Creating a SASI index after creating an SAI index does not break secondary index queries (CASSANDRA-18939)
  * Optionally fail when a non-partition-restricted query is issued against an index (CASSANDRA-18796)
  * Add a startup check to fail startup when using invalid configuration with certain Kernel and FS type (CASSANDRA-19196)
  * UCS min_sstable_size should not be lower than target_sstable_size lower bound (CASSANDRA-19112)
